Update .env.example and README.md with Russian translations and detailed API integration instructions

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,39 @@
-# Server Configuration
+# ============================================
+# Конфигурация сервера
+# ============================================
 PORT=3000
 NODE_ENV=development
 
-# Tour Operator API Configuration
+# ============================================
+# Конфигурация API туроператора
+# ============================================
+# Базовый URL API (обязательно для реального API)
+# Примеры:
+#   Andromeda: https://api.andromeda.ru/v1
+#   Travelata: https://api.travelata.ru/v2
+#   Level.Travel: https://api.level.travel/v1
+#   OnlineTours: https://api.onlinetours.ru/api/v1
+#   TravelLine: https://api.travelline.ru/partner/v1
+#   HT.KZ: https://api.ht.kz/v1
 TOUR_API_BASE_URL=https://api.example-tour-operator.com/v1
+
+# API ключ для аутентификации (обязательно для реального API)
 TOUR_API_KEY=your-api-key-here
+
+# Секретный ключ (если требуется, например для Level.Travel)
+TOUR_API_SECRET=your-api-secret-here
+
+# Таймаут запроса в миллисекундах (по умолчанию 30 секунд)
 TOUR_API_TIMEOUT=30000
+
+# Количество попыток при ошибке (по умолчанию 3)
 TOUR_API_RETRY_ATTEMPTS=3
 
-# Application Configuration
+# ============================================
+# Конфигурация приложения
+# ============================================
+# Максимальное количество результатов в ответе
 MAX_RESULTS_LIMIT=100
+
+# Количество результатов по умолчанию
 DEFAULT_RESULTS_LIMIT=20
